Bug: Remove white space before map in index page
The margin added to the top of the map in the restaurant page created white space before the  map in index page.
This bug was fixed by specifically selecting the restaurant map

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -121,7 +121,7 @@ nav h1 {
         border-bottom: 1px solid #d9d9d9;
       }
     
-     #map{
+      .inside #map-container #map{
          margin-top: 100px;
          height: 600px;
      }
